# chickpea

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/: chickpea.tiled-project  chickpea.tiled-session
assets/characters/: bjin.aseprite  soldier.aseprite
assets/fonts/: bismuth.aseprite  bismuth_pal.aseprite
assets/interface/: speech_bubble.aseprite
assets/map/: attributes.tsx  tile_cursor.aseprite  tile_cursor_pal.aseprite  tile_highlight.aseprite  tile_pointer.aseprite
assets/map/demo/: map.tmx  map_height.csv  map_high.csv  map_low.csv  map_occlusion.csv  map_walkable.csv  tileset.aseprite  tileset.tsx
assets/portraits/: Bjin.aseprite  Bjin_LICENSE
baked/: baked.c  bismuth.c  cga_thin.c  char_bjin.c  demo_tileset.c  portrait_bjin.c  scripts.c  speech_bubble.c  tile_cursor.c  tile_highlight.c  tile_pointer.c
baked/characters/: bjin.4bpp  bjin.pal  soldier.4bpp  soldier.pal
baked/fonts/: bismuth_font.4bpp  bismuth_font.width  debug_font  debug_font.4bpp
baked/interface/: speech_bubble.4bpp  speech_bubble.pal  speech_bubble.tiles
baked/map/: tile_cursor.4bpp  tile_cursor.pal  tile_highlight  tile_highlight.4bpp  tile_highlight.pal  tile_pointer.4bpp  tile_pointer.pal
baked/map/demo/: map.4bpp  map.attributes  map.height  map.high  map.low  map.occlusion  map.pal  map.walk
baked/portraits/: Bjin.8bpp  Bjin.pals
include/: chickpea.h
include/chickpea/: bit_vec.h  common.h  debug_font.h  emulated.h  gba.h  map.h  nano_unit.h  platform.h  vec2.h
include/game/: debug_font.h  font.h  game_state.h  input.h  map.h  object_tiles.h  random.h  resource.h  screen.h  sprite.h  text_box.h
include/lua/: alloc.h
scripts/: hello.lua
src/: bit_vec.c  common.c  debug_font.c  embedded_data.s  emulated.c  gba.c  linker.ld  main.c  map.c  nano_unit.c  test_suites.c
src/chickpea/: bit_vec.c  common.c  crt0.s  emulated.c  gba.c  linker.ld  nano_unit.c
src/game/: debug_font.c  embedded_data.s  font.c  input.c  map.c  object_tiles.c  random.c  resource.c  sprite.c  text_box.c
src/lua/: alloc.c
tools/: bake.sh
tools/bake/: Cargo.toml
tools/bake/src/: lz77.rs  main.rs
tools/lua54/src/: lua
